# wanna-ml-cookiecutter

./: .gitignore  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.__wanna_project_name}}/: .dockerignore  .gitignore  Dockerfile  README.md  dockerbuild.yaml  pyproject.toml  wanna.yaml
{{cookiecutter.__wanna_project_name}}/notebooks/: train.ipynb
{{cookiecutter.__wanna_project_name}}/params/: params.stage.yaml
{{cookiecutter.__wanna_project_name}}/src/{{cookiecutter.__wanna_project_slug}}/: config.py  pipeline.py
{{cookiecutter.__wanna_project_name}}/src/{{cookiecutter.__wanna_project_slug}}/core/: components.py  data.py  train.py
{{cookiecutter.project_slug}}/: README.md  pyproject.toml  wanna.yaml
{{cookiecutter.project_slug}}/pipeline/: config.py  pipeline.py
{{cookiecutter.project_slug}}/pipeline/components/trainer/: train_xgb_model.py
